
syntax = "proto3";
package strategy.v1;

import "agent_info/v1/agent_info.proto";

option go_package = "github.com/dhiaayachi/llm-fabric/proto/gen/strategy/v1";

// The greeting service definition.
// go:plugin type=plugin version=1
service StrategyService {
  // Sends a greeting
  rpc Execute(ExecuteRequest) returns (ExecuteResponse) {}
}

// The request message containing the user's name.
message ExecuteRequest {
  string task = 1;
  repeated agent_info.v1.AgentInfo agents = 2;
  int32 local_idx = 3;
}

// The reply message containing the greetings
message ExecuteResponse {
  repeated TaskAgents task_agents = 3;

}

message TaskAgents {
  string task = 1;
  agent_info.v1.AgentInfo agent = 2;
  agent_info.v1.NodeInfo node = 3;
}